--- a/styles.scss
+++ b/styles.scss
@@ -11,6 +11,10 @@ body {
   box-sizing: border-box;
 }
 
+#content {
+  position: relative;
+  max-height: 100%;
+}
 
 .page {
   white-space: nowrap;
@@ -23,11 +27,10 @@ body {
   background: #ddd;
 }
 
-
 /*------------ content ---------------*/
 
-.content {
-  padding: 20px;
+.page__content {
+  height: calc(100% - 40px);
 }
 
 .page__head {
