--- a/styles.scss
+++ b/styles.scss
@@ -26,27 +26,30 @@ body {
   height: 40px;
   background: #ddd;
 
-  .menu__right {
-    text-align: center;
-    width: 260px;
+  .menu {
     float: right;
-    position: relative;
-    margin-top:11px;
-    cursor: pointer;
-
-    .title{
-      height: 29px;
-    }
-
-
-    .menu__open {
-      background-color: white;
-      border: 1px solid gray;
-      text-align: left;
-      z-index: 1;
-    }
+    margin-top: 10px;
   }
+}
 
+/*------------ menu ------------*/
+
+.menu {
+  display: inline-block;
+  position: relative;
+  padding: 0 20px;
+  cursor: pointer;
+  vertical-align: middle;
+
+  .menu__body {
+    position: absolute;
+    right: 10px;
+    padding: 10px;
+    background-color: white;
+    border: 1px solid gray;
+    text-align: left;
+    z-index: 1;
+  }
 }
 
 /*------------ content ---------------*/
