Adding styles in PopupTask

--- a/styles.scss
+++ b/styles.scss
@@ -164,3 +164,10 @@ body {
     background: #ddd;
   }
 }
+
+/*------------ PopupTask -----------------*/
+
+.popupTask_name {
+  display: inline-block;
+  padding: 0 4px;
+}
