--- a/styles.scss
+++ b/styles.scss
@@ -267,10 +267,6 @@ body {
   padding-left: 10px;
 }
 
-.taskPopup__description___enabled {
-  float: left;
-}
-
-.taskPopup__description___disabled {
+.taskPopup__description {
   float: left;
 }
