--- a/styles.scss
+++ b/styles.scss
@@ -48,6 +48,12 @@ body {
   max-height: 100%;
 }
 
+.loading {
+  animation: progress-bar-stripes 2s linear infinite;
+  background-size: 40px 40px !important;
+  background-image: linear-gradient(45deg, rgba(255, 255, 255, .25) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .25) 50%, rgba(255, 255, 255, .25) 75%, transparent 75%, transparent) !important;
+}
+
 .page {
   white-space: nowrap;
 }
@@ -308,23 +314,35 @@ body {
 
 /*-------------------- login ---------------------*/
 
+.page_unauth__content:not(.page_unauth__contentProcessing) {
+    margin-top: 4px;
+}
+
 .page_unauth__panel {
     width: 280px;
     margin: 0 auto;
     padding-top: 290px;
 }
 
-.page_login__email,
-.page_login__password {
-    display: block !important;
-    width: 100% !important;
+.page_unauth__text {
+    text-align: center;
+    padding: 10px 0;
 }
 
-.page_login__password {
-    margin-top: -8px !important;
+.page_unauth__input {
+    display: block !important;
+    width: 100% !important;
+
+    &:not(:first-child) {
+        margin-top: -8px !important;
+    }
 }
 
 .page_unauth__buttons {
     margin-top: 28px;
     text-align: right;
+
+    & > div {
+        margin-left: 8px;
+    }
 }
