--- a/styles.scss
+++ b/styles.scss
@@ -92,6 +92,7 @@ body {
 /*------------ content ---------------*/
 
 .page__content {
+  position: absolute;
   height: calc(100% - 49px);
 }
 
@@ -315,34 +316,34 @@ body {
 /*-------------------- login ---------------------*/
 
 .page_unauth__content:not(.page_unauth__contentProcessing) {
-    margin-top: 4px;
+  margin-top: 4px;
 }
 
 .page_unauth__panel {
-    width: 280px;
-    margin: 0 auto;
-    padding-top: 290px;
+  width: 280px;
+  margin: 0 auto;
+  padding-top: 290px;
 }
 
 .page_unauth__text {
-    text-align: center;
-    padding: 10px 0;
+  text-align: center;
+  padding: 10px 0;
 }
 
 .page_unauth__input {
-    display: block !important;
-    width: 100% !important;
+  display: block !important;
+  width: 100% !important;
 
-    &:not(:first-child) {
-        margin-top: -8px !important;
-    }
+  &:not(:first-child) {
+    margin-top: -8px !important;
+  }
 }
 
 .page_unauth__buttons {
-    margin-top: 28px;
-    text-align: right;
+  margin-top: 28px;
+  text-align: right;
 
-    & > div {
-        margin-left: 8px;
-    }
+  & > div {
+    margin-left: 8px;
+  }
 }
