--- a/styles.scss
+++ b/styles.scss
@@ -77,6 +77,12 @@ body {
   position: absolute !important;
 }
 
+.linearLoader {
+    position: fixed !important;
+    top: 0 !important;
+    left: 0 !important;
+}
+
 /*----------- panel --------------*/
 
 .panel {
