--- a/styles.scss
+++ b/styles.scss
@@ -174,18 +174,6 @@ body {
     }
   }
 
-  .calendar__monthName {
-    position: absolute;
-    top: -20px;
-    left: 10px;
-    font-size: 30px;
-    background: rgba(0, 0, 0, 0.1);
-    padding: 4px;
-    border-radius: 10px;
-    box-shadow: 0px 0px 12px 10px #E9E8E6;
-    transition: 0.3s opacity;
-  }
-
   .calendar__body {
     height: calc(100% - 36px);
     overflow-y: scroll;
@@ -217,6 +205,18 @@ body {
 .calendarCell__date {
   font-size: 13px;
   padding-bottom: 6px;
+}
+
+.calendarCell__monthName {
+  position: absolute;
+  top: -20px;
+  left: 10px;
+  font-size: 30px;
+  background: rgba(0, 0, 0, 0.1);
+  padding: 4px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 12px 10px #E9E8E6;
+  transition: 0.3s opacity;
 }
 
 .page_tasks__tasksListWrap {
